package live_check

import (
	"context"
	"expvar"
	"log"
	"net/http"
	"runtime"
	"time"

	"github.com/movsb/taoblog/cmd/server/maintenance"
	"github.com/movsb/taoblog/modules/version"
	"github.com/movsb/taoblog/protocols/go/proto"
	"github.com/movsb/taoblog/service"
	"github.com/movsb/taoblog/service/micros/auth/user"
)

var (
	stack = expvar.NewString(`live_check_stack`)
	last  time.Time
)

// æœåŠ¡å¯ç”¨æ€§æ£€æµ‹ã€‚
//
//   - å‡½æ•°ä¸ä¼šè¿”å›ï¼Œé™¤é ctx ç»“æŸã€‚
//   - æ³¨æ„æ£€æµ‹çš„æ—¶å€™éƒ½ä¸åº”è¯¥å¢åŠ é¦–é¡µ/æ–‡ç« çš„é˜…è¯»æ¬¡æ•°ã€‚
//   - æ–‡ç«  1 å¿…é¡»å­˜åœ¨ã€‚å¯ä»¥æ˜¯éå…¬å¼€çŠ¶æ€ã€‚
//
// å‡ºç°è¿‡ Home å› ç£ç›˜æ»¡åçš„ 502 é”™è¯¯ï¼Œä½†æ˜¯æ‰¾ä¸åˆ°æ ˆï¼Œå› æ­¤ä¹Ÿæ£€æµ‹ä¸»é¡µã€‚
func LiveCheck(ctx context.Context, svc *service.Service, maintenanceMode maintenance.MaintenanceMode, sendNotify func(title, message string)) {
	l := _LiveCheck{
		ctx:         ctx,
		svc:         svc,
		maintenance: maintenanceMode,
		sendNotify:  sendNotify,
	}
	for {
		if !l.checkPost() || !l.checkHome() {
			time.Sleep(time.Second * 5)
			continue
		}

		select {
		case <-ctx.Done():
			return
		case <-time.After(time.Minute * 5):
		}
	}
}

type _LiveCheck struct {
	ctx         context.Context
	svc         *service.Service
	maintenance maintenance.MaintenanceMode
	sendNotify  func(title, message string)
}

// å¦‚æœæ¥å£å¯ç”¨ï¼Œè¿”å› trueã€‚
func (l *_LiveCheck) checkPost() bool {
	now := time.Now()
	_, err := l.svc.GetPost(user.SystemForLocal(l.ctx), &proto.GetPostRequest{Id: 1})
	if elapsed := time.Since(now); elapsed > time.Second*10 {
		l.maintenance.Enter(`æˆ‘ä¹Ÿä¸çŸ¥é“ä¸ºä»€ä¹ˆï¼Œåæ­£å°±æ˜¯æœåŠ¡æ¥å£å¡ä½äº†ğŸ¥µã€‚`, -1)
		l.sendNotify(`æœåŠ¡ä¸å¯ç”¨`, `ä¿æ´»æ£€æµ‹å¡ä½äº†`)
		log.Println(`æœåŠ¡æ¥å£å“åº”éå¸¸æ…¢äº†ã€‚`)

		// æ­£å¼ç¯å¢ƒæ—¶æ‰“å°å®Œæ•´çš„æ ˆä¿¡æ¯ã€‚
		if !version.DevMode() {
			buf := make([]byte, 1<<20)
			runtime.Stack(buf, true)
			stack.Set(string(buf))
			last = time.Now()
		}

		return false
	}
	if err != nil {
		l.sendNotify(`è·å–æ–‡ç« æ—¶å‡ºé”™ã€‚`, `åœ¨çº¿çŠ¶æ€æ£€æµ‹`)
		return false
	}

	l.maintenance.Leave()

	// æœ€å¤šä¿ç•™ä¸€å¤©çš„æ ˆã€‚
	if !last.IsZero() && time.Since(last) > time.Hour*24 {
		stack.Set(``)
	}

	return true
}

func (l *_LiveCheck) checkHome() bool {
	ctx, cancel := context.WithTimeout(l.ctx, time.Second*5)
	defer cancel()
	req, err := http.NewRequestWithContext(ctx, http.MethodGet, l.svc.Config().Site.GetHome(), nil)
	if err != nil {
		log.Println(err)
		return false
	}
	rsp, err := http.DefaultClient.Do(req)
	if err != nil {
		log.Println(err)
		l.sendNotify(`è·å–é¦–é¡µæ•°æ®å¤±è´¥ï¼š`+err.Error(), `åœ¨çº¿çŠ¶æ€æ£€æµ‹`)
		return false
	}
	defer rsp.Body.Close()
	if rsp.StatusCode != 200 {
		l.sendNotify(`è·å–é¦–é¡µæ•°æ®çŠ¶æ€ç ä¸æ­£ç¡®ï¼š`+rsp.Status, `åœ¨çº¿çŠ¶æ€æ£€æµ‹`)
		return false
	}
	return true
}
